# hourglass

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
hourglass/: cli.py  config.py  sand.py  timecalc.py  ui.py
