[metadata]
name = lachiemyatt-hourglass
version = 0.2.0
description = Full-screen terminal dashboard for day/year/life progress
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.11

[options.entry_points]
console_scripts =
    hourglass = hourglass.cli:main
